--- a/package.json
+++ b/package.json
@@ -28,5 +28,18 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.7"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vinnybarbs/Cray_Cray_Parlay_App.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vinnybarbs/Cray_Cray_Parlay_App/issues"
+  },
+  "homepage": "https://github.com/vinnybarbs/Cray_Cray_Parlay_App#readme"
 }
