--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,23 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore environment variables
+.env
+.env.*
+
+# Node dependencies
+node_modules
+
+# Build output
+dist
+
+# Misc
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Vite
+.vite
+
