docs: Add comprehensive roster verification documentation
- Added API_SPORTS_KEY to env.example with usage notes
- Created ROSTER_VERIFICATION.md with full system documentation
- Explains problem, solution, caching strategy, and API usage
- Includes testing examples and troubleshooting guide
- Documents performance impact and cost analysis

--- a/env.example
+++ b/env.example
@@ -17,6 +17,12 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Used for game research and news
 SERPER_API_KEY=your_serper_api_key_here
 
+# API-Sports - https://dashboard.api-football.com/register
+# Used for player roster verification (prevents AI hallucinations)
+# Free tier: 100 requests/day - covers NFL, NCAAF, NBA rosters
+# Optional but highly recommended for accurate player-team assignments
+API_SPORTS_KEY=your_api_sports_key_here
+
 # Server Configuration
 PORT=5001
 NODE_ENV=development
