--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
