--- a/env.example
+++ b/env.example
@@ -25,3 +25,8 @@ NODE_ENV=development
 
 # Frontend URL (for CORS in production)
 FRONTEND_URL=http://localhost:3001
+
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+APISPORTS_API_KEY=your_api_sports_key_here
