Add Railway deployment config, cron endpoint, and verification tooling
- Add Procfile for Railway startup configuration
- Add Dockerfile for container-based deployment
- Add DEPLOY_RAILWAY.md with complete deployment checklist
- Add DEPLOYMENT_STATUS.md with current status and next steps
- Add scripts/verify_railway.js for endpoint verification
- Update frontend API_BASE to default to Railway URL
- Add CRON_SECRET and Supabase keys to env.example
- Ensure /cron/refresh-odds endpoint is registered in server.js
- Verify cache-first behavior in odds-agent.js
- All validation middleware in place for parlay generation
- Tested: /api/health (200), /api/generate-parlay (200), /cron/refresh-odds (404 on old deploy)

--- a/env.example
+++ b/env.example
@@ -25,3 +25,17 @@ NODE_ENV=development
 
 # Frontend URL (for CORS in production)
 FRONTEND_URL=http://localhost:3001
+
+# API Base URL (frontend config for backend endpoint)
+# Local development: empty (uses relative paths, defaults to http://localhost:5001)
+# Production (Railway): https://craycrayparlayapp-production.up.railway.app
+VITE_API_BASE_URL=https://craycrayparlayapp-production.up.railway.app
+
+# Cron Secret (used to protect /cron/refresh-odds endpoint)
+CRON_SECRET=your_cron_secret_here
+
+# Supabase Configuration
+SUPABASE_URL=your_supabase_url_here
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+
