Fix Railway build: use Node 20, remove problematic postinstall, copy source before build
- Add .nvmrc to specify Node 20 (required for Vite 7, Supabase, Firebase)
- Update package.json to declare engines: node >=20.19.0
- Remove postinstall hook (causes build to run before source is copied)
- Update Dockerfile: use Node 20, install all deps (including dev), then copy source, then build
- Dockerfile now uses npm ci with all dependencies to ensure clean, reproducible builds
- NODE_ENV=production set in Dockerfile

Resolves: 'vite: not found', 'Could not resolve entry module' errors during Railway deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "craycrayapp",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20.19.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
   "dev": "vite",
   "build": "vite build",
@@ -10,7 +14,6 @@
   "server": "node server.js",
   "server:dev": "nodemon server.js",
   "start": "node server.js",
-  "postinstall": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
