--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
+    "lucide-react": "^0.454.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
     "react": "^19.2.0",
