Fix Vercel serverless function limit (12 function cap)
ISSUE: Vercel Hobby plan exceeded (12 serverless functions max)
Root cause: vercel.json was routing /api/* causing Vercel to
deploy backend code as serverless functions

SOLUTION: Frontend-only Vercel deployment
- Vercel = Static files only (dist/)
- Railway = Backend API only

CHANGES:
1. Created .vercelignore
   - Excludes: api/, server.js, lib/, database/
   - Prevents backend code from being deployed to Vercel

2. Updated vercel.json
   - Removed API rewrites (/api/*)
   - Configure for SPA routing only (/*.->index.html)
   - Framework: vite, output: dist/

3. Added VERCEL_SERVERLESS_FIX.md
   - Complete troubleshooting guide
   - Verification steps
   - Architecture diagram

ARCHITECTURE:
USER → Vercel (static) → Railway (API) → Supabase (DB)

BEFORE: 12+ serverless functions ❌
AFTER:  0-2 serverless functions ✅

STAYS ON FREE TIER!

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,27 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
     {
-      "source": "/health",
-      "destination": "/api/health"
-    },
-    {
-      "source": "/debug/odds-test",
-      "destination": "/api/debug-odds"
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
     }
   ]
 }
