Tune pick suggestion modes and conflict rules

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "craycrayapp",
   "private": true,
+  "type": "module",
   "version": "0.0.0",
   "engines": {
     "node": ">=20.19.0",
